[gd_scene load_steps=72 format=2]

[ext_resource path="res://assets/Characters/ArchFiendIdleFront.png" type="Texture" id=1]
[ext_resource path="res://Death_City.gd" type="Script" id=2]
[ext_resource path="res://assetsMap/mainlevbuild.png" type="Texture" id=3]
[ext_resource path="res://KinematicBody2D.gd" type="Script" id=4]
[ext_resource path="res://assets/Characters/_up attack.png" type="Texture" id=5]
[ext_resource path="res://assets/Characters/lifebarGreen.png" type="Texture" id=6]
[ext_resource path="res://assets/Characters/lifebarRed.png" type="Texture" id=7]
[ext_resource path="res://assets/Characters/_side attack.png" type="Texture" id=8]
[ext_resource path="res://assets/Characters/_side walk.png" type="Texture" id=9]
[ext_resource path="res://assets/Characters/_down walk.png" type="Texture" id=10]
[ext_resource path="res://assets/Characters/_side idle.png" type="Texture" id=11]
[ext_resource path="res://assets/Characters/_down idle.png" type="Texture" id=12]
[ext_resource path="res://assets/Characters/_up walk.png" type="Texture" id=13]
[ext_resource path="res://assets/Characters/_down attack.png" type="Texture" id=14]
[ext_resource path="res://assets/Characters/_up idle.png" type="Texture" id=15]
[ext_resource path="res://Layout.tscn" type="PackedScene" id=16]

[sub_resource type="CapsuleShape2D" id=78]
height = 22.0

[sub_resource type="AtlasTexture" id=40]
flags = 4
atlas = ExtResource( 14 )
region = Rect2( 0, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=41]
flags = 4
atlas = ExtResource( 14 )
region = Rect2( 64, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=42]
flags = 4
atlas = ExtResource( 14 )
region = Rect2( 0, 64, 64, 64 )

[sub_resource type="AtlasTexture" id=50]
flags = 4
atlas = ExtResource( 12 )
region = Rect2( 0, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=51]
flags = 4
atlas = ExtResource( 12 )
region = Rect2( 64, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=52]
flags = 4
atlas = ExtResource( 12 )
region = Rect2( 128, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=53]
flags = 4
atlas = ExtResource( 12 )
region = Rect2( 192, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=54]
flags = 4
atlas = ExtResource( 12 )
region = Rect2( 0, 64, 64, 64 )

[sub_resource type="AtlasTexture" id=55]
flags = 4
atlas = ExtResource( 10 )
region = Rect2( 0, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=56]
flags = 4
atlas = ExtResource( 10 )
region = Rect2( 64, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=57]
flags = 4
atlas = ExtResource( 10 )
region = Rect2( 128, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=58]
flags = 4
atlas = ExtResource( 10 )
region = Rect2( 192, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=59]
flags = 4
atlas = ExtResource( 10 )
region = Rect2( 0, 64, 64, 64 )

[sub_resource type="AtlasTexture" id=60]
flags = 4
atlas = ExtResource( 10 )
region = Rect2( 64, 64, 64, 64 )

[sub_resource type="AtlasTexture" id=43]
flags = 4
atlas = ExtResource( 8 )
region = Rect2( 0, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=44]
flags = 4
atlas = ExtResource( 8 )
region = Rect2( 64, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=45]
flags = 4
atlas = ExtResource( 8 )
region = Rect2( 0, 64, 64, 64 )

[sub_resource type="AtlasTexture" id=61]
flags = 4
atlas = ExtResource( 11 )
region = Rect2( 0, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=62]
flags = 4
atlas = ExtResource( 11 )
region = Rect2( 64, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=63]
flags = 4
atlas = ExtResource( 11 )
region = Rect2( 128, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=64]
flags = 4
atlas = ExtResource( 11 )
region = Rect2( 192, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=65]
flags = 4
atlas = ExtResource( 11 )
region = Rect2( 0, 64, 64, 64 )

[sub_resource type="AtlasTexture" id=66]
flags = 4
atlas = ExtResource( 9 )
region = Rect2( 64, 64, 64, 64 )

[sub_resource type="AtlasTexture" id=67]
flags = 4
atlas = ExtResource( 9 )
region = Rect2( 0, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=68]
flags = 4
atlas = ExtResource( 9 )
region = Rect2( 64, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=69]
flags = 4
atlas = ExtResource( 9 )
region = Rect2( 128, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=70]
flags = 4
atlas = ExtResource( 9 )
region = Rect2( 192, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=71]
flags = 4
atlas = ExtResource( 9 )
region = Rect2( 0, 64, 64, 64 )

[sub_resource type="AtlasTexture" id=46]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 0, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=47]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 64, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=48]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 0, 64, 64, 64 )

[sub_resource type="AtlasTexture" id=35]
flags = 4
atlas = ExtResource( 15 )
region = Rect2( 0, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=36]
flags = 4
atlas = ExtResource( 15 )
region = Rect2( 64, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=37]
flags = 4
atlas = ExtResource( 15 )
region = Rect2( 128, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=38]
flags = 4
atlas = ExtResource( 15 )
region = Rect2( 192, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=39]
flags = 4
atlas = ExtResource( 15 )
region = Rect2( 0, 64, 64, 64 )

[sub_resource type="AtlasTexture" id=72]
flags = 4
atlas = ExtResource( 13 )
region = Rect2( 0, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=73]
flags = 4
atlas = ExtResource( 13 )
region = Rect2( 64, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=74]
flags = 4
atlas = ExtResource( 13 )
region = Rect2( 128, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=75]
flags = 4
atlas = ExtResource( 13 )
region = Rect2( 192, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=76]
flags = 4
atlas = ExtResource( 13 )
region = Rect2( 0, 64, 64, 64 )

[sub_resource type="AtlasTexture" id=77]
flags = 4
atlas = ExtResource( 13 )
region = Rect2( 64, 64, 64, 64 )

[sub_resource type="SpriteFrames" id=79]
animations = [ {
"frames": [ SubResource( 40 ), SubResource( 41 ), SubResource( 42 ) ],
"loop": true,
"name": "down_attack",
"speed": 5.0
}, {
"frames": [ SubResource( 50 ), SubResource( 51 ), SubResource( 52 ), SubResource( 53 ), SubResource( 54 ) ],
"loop": true,
"name": "down_idle",
"speed": 4.0
}, {
"frames": [ SubResource( 55 ), SubResource( 56 ), SubResource( 57 ), SubResource( 58 ), SubResource( 59 ), SubResource( 60 ) ],
"loop": true,
"name": "down_walk",
"speed": 4.0
}, {
"frames": [ SubResource( 43 ), SubResource( 44 ), SubResource( 45 ) ],
"loop": true,
"name": "side_attack",
"speed": 5.0
}, {
"frames": [ SubResource( 61 ), SubResource( 62 ), SubResource( 63 ), SubResource( 64 ), SubResource( 65 ) ],
"loop": true,
"name": "side_idle",
"speed": 4.0
}, {
"frames": [ SubResource( 66 ), SubResource( 67 ), SubResource( 68 ), SubResource( 69 ), SubResource( 70 ), SubResource( 71 ) ],
"loop": true,
"name": "side_walk",
"speed": 4.0
}, {
"frames": [ SubResource( 46 ), SubResource( 47 ), SubResource( 48 ) ],
"loop": true,
"name": "up_attack",
"speed": 5.0
}, {
"frames": [ SubResource( 35 ), SubResource( 36 ), SubResource( 37 ), SubResource( 38 ), SubResource( 39 ) ],
"loop": true,
"name": "up_idle",
"speed": 4.0
}, {
"frames": [ SubResource( 72 ), SubResource( 73 ), SubResource( 74 ), SubResource( 75 ), SubResource( 76 ), SubResource( 77 ) ],
"loop": true,
"name": "up_walk",
"speed": 4.0
} ]

[sub_resource type="AtlasTexture" id=1]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=2]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 32, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=3]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 64, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=4]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 96, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=5]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 128, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=6]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 160, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=7]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 192, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=8]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 224, 0, 32, 32 )

[sub_resource type="SpriteFrames" id=9]
animations = [ {
"frames": [ SubResource( 1 ), SubResource( 2 ), SubResource( 3 ), SubResource( 4 ), SubResource( 5 ), SubResource( 6 ), SubResource( 7 ), SubResource( 8 ) ],
"loop": true,
"name": "idle",
"speed": 5.0
} ]

[sub_resource type="CircleShape2D" id=11]

[sub_resource type="TileSet" id=10]
0/name = "mainlevbuild.png 0"
0/texture = ExtResource( 3 )
0/tex_offset = Vector2( 0, 0 )
0/modulate = Color( 1, 1, 1, 1 )
0/region = Rect2( 608, 256, 96, 96 )
0/tile_mode = 2
0/autotile/icon_coordinate = Vector2( 0, 0 )
0/autotile/tile_size = Vector2( 32, 32 )
0/autotile/spacing = 0
0/autotile/occluder_map = [  ]
0/autotile/navpoly_map = [  ]
0/autotile/priority_map = [  ]
0/autotile/z_index_map = [  ]
0/occluder_offset = Vector2( 0, 0 )
0/navigation_offset = Vector2( 0, 0 )
0/shape_offset = Vector2( 0, 0 )
0/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
0/shape_one_way = false
0/shape_one_way_margin = 0.0
0/shapes = [  ]
0/z_index = 0
1/name = "mainlevbuild.png 1"
1/texture = ExtResource( 3 )
1/tex_offset = Vector2( 0, 0 )
1/modulate = Color( 1, 1, 1, 1 )
1/region = Rect2( 768, 32, 96, 96 )
1/tile_mode = 2
1/autotile/icon_coordinate = Vector2( 0, 0 )
1/autotile/tile_size = Vector2( 32, 32 )
1/autotile/spacing = 0
1/autotile/occluder_map = [  ]
1/autotile/navpoly_map = [  ]
1/autotile/priority_map = [  ]
1/autotile/z_index_map = [  ]
1/occluder_offset = Vector2( 0, 0 )
1/navigation_offset = Vector2( 0, 0 )
1/shape_offset = Vector2( 0, 0 )
1/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
1/shape_one_way = false
1/shape_one_way_margin = 0.0
1/shapes = [  ]
1/z_index = 0

[node name="Death_City" type="Node2D"]
script = ExtResource( 2 )

[node name="KinematicBody2D" type="KinematicBody2D" parent="."]
position = Vector2( 523, 294 )
script = ExtResource( 4 )
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="KinematicBody2D"]
position = Vector2( -7, 6 )
shape = SubResource( 78 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="KinematicBody2D"]
position = Vector2( -7, 6 )
frames = SubResource( 79 )
animation = "up_idle"

[node name="Camera2D" type="Camera2D" parent="KinematicBody2D"]
position = Vector2( 158, 43 )
editor_draw_limits = true

[node name="Layout" parent="KinematicBody2D" instance=ExtResource( 16 )]
margin_left = -356.0
margin_top = -264.0
margin_right = -356.0
margin_bottom = -264.0

[node name="TextureProgress" type="TextureProgress" parent="KinematicBody2D"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -30.0
margin_top = -40.0
margin_right = 20.0
margin_bottom = 10.0
texture_under = ExtResource( 7 )
texture_progress = ExtResource( 6 )

[node name="HealthLife" type="Timer" parent="KinematicBody2D"]
wait_time = 5.0
autostart = true

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( 517, 202 )
scale = Vector2( 2, 2 )
z_index = 1
frames = SubResource( 9 )
animation = "idle"

[node name="TouchScreenButton" type="TouchScreenButton" parent="AnimatedSprite"]
position = Vector2( -21.5, -16.5 )
scale = Vector2( 2.14318, 1.7 )
shape = SubResource( 11 )

[node name="Label" type="Label" parent="AnimatedSprite"]
self_modulate = Color( 0.705882, 1, 0, 1 )
margin_left = -83.5
margin_top = -31.5
margin_right = 318.5
margin_bottom = -0.5
rect_scale = Vector2( 0.5, 0.5 )
text = "you died... HAHAHA!
If you give me everything you have in your bag I will revive you"

[node name="TileMap" type="TileMap" parent="."]
tile_set = SubResource( 10 )
cell_size = Vector2( 32, 32 )
format = 1
tile_data = PoolIntArray( 262157, 0, 1, 262158, 0, 1, 262159, 0, 1, 262160, 0, 1, 262161, 0, 1, 262162, 0, 1, 262163, 0, 1, 327693, -1610612736, 1, 327699, -1073741824, 1, 393229, -1610612736, 1, 393235, -1073741824, 1, 458765, -1610612736, 1, 458771, -1073741824, 1, 524301, -1610612736, 1, 524307, -1073741824, 1, 589837, -1610612736, 1, 589843, -1073741824, 1, 655373, -1610612736, 1, 655379, -1073741824, 1, 720909, 1610612736, 1, 720910, 1610612736, 1, 720911, 1610612736, 1, 720912, 1610612736, 1, 720913, 1610612736, 1, 720914, 1610612736, 1, 720915, 1610612736, 1 )

[connection signal="child_entered_tree" from="." to="." method="_on_Death_City_child_entered_tree"]
[connection signal="child_exiting_tree" from="." to="." method="_on_Death_City_child_exiting_tree"]
[connection signal="timeout" from="KinematicBody2D/HealthLife" to="KinematicBody2D" method="_on_HealthLife_timeout"]
[connection signal="pressed" from="AnimatedSprite/TouchScreenButton" to="." method="_on_TouchScreenButton_pressed"]
